# gpr200-fa2024-mason-crochetiere

./: CMakeLists.txt
assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment2/: main.cpp
assignments/assignment4/: main.cpp
assignments/assignment5/: main.cpp
assignments/assignment6/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/DeanLib/: CircularQueue.cpp  DeanLibUtilities.cpp  DeanMath.cpp  Event.cpp  EventListener.cpp  EventSystem.cpp  MemoryPool.cpp  MemoryTracker.cpp  PerformanceTracker.cpp  RayCaster.cpp  Timer.cpp  Trackable.cpp  Vector2D.cpp  tinyxml2.cpp
core/DeanLib/Debug/DeanLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DeanLib.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
core/DeanLib/include/: DataRepository.h  Event.h  EventListener.h  EventSystem.h
core/DeanLib/lib/: DeanLibDebug.idb
core/Lighting/: LightingSystem.cpp  LightingSystem.h
core/MeshSystem/: MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  mesh.cpp  mesh.h  meshGenerator.cpp  meshGenerator.h  shapeGenerator.cpp  terrain.cpp  terrain.h
core/ParticleSystem/: MemoryPool.cpp  MemoryPool.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemValues.cpp  ParticleSystemValues.h
core/Skybox/: skybox.cpp  skybox.h
core/ew/: mesh.cpp  mesh.h  procGen.cpp  procGen.h
core/macroLib/: camera.cpp  camera.h  shader.cpp  shader.h  shaderSystem.cpp  shaderSystem.h  texture2D.cpp  texture2D.h
enc_temp_folder/bcc8e209a4f168d38203a75b583eedd/: main.cpp
(+20 files in other folders)
